# chatry

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  bot.gd  build.sh  cache.gd  cache.gd.uid  config.toml  convert_plushie.sh  deploy.sh  edit.sh  export_presets.cfg  flake.nix  project.godot  serializer.gd  serializer.gd.uid  shell.nix  store.json
.direnv/: nix-profile-pre513124.cf73a86c35a8  nix-profile-pre513124.cf73a86c35a8.rc
Assets/Plushies/: Badcop.ron  Bash.ron  C++.ron  C.ron  Ferris.ron  Helix.ron  Kuviman.ron  Manjaro.ron  NixOS.ron  PinMode.ron  VSCode.ron
Assets/Plushies/Birthday/: 1.ron  10.ron  11.ron  12.ron  13.ron  14.ron  15.ron  16.ron  17.ron  2.ron  3.ron  4.ron  5.ron  6.ron  7.ron  8.ron  9.ron
addons/BetterProcesses/: .gitignore  BetterProcesses.gdextension.uid  Cargo.toml  README.md  buildSystem.sh  example.tscn  icon.png.import
addons/BetterProcesses/src/: lib.rs
addons/TwitchEventSub/: build-gdext.sh  flake.nix  twitchapi.gdextension
addons/softbody2d/: plugin.gd.uid  softbody2d.gd  softbody2d.gd.uid  softbody2d_rigidbody.gd.uid  voronoi2d.gd.uid  voronoi_icon.png.import
addons/twitcher/: default_oauth_token.tres  twitch_irc.gd  twitch_oauth_setting.tres  twitch_service.gd
addons/twitcher/chat/: twitch_chat.gd  twitch_command_help.gd
addons/wakatime/: heartbeat.gd.uid  wakatime.gd.uid
assets/: .gitignore  NoImagePlaceholder.svg.import  basketball-score.wav.import  live.png.import  live.png~  readchat.wav.import  redeem.wav.import
assets/alerts/: redeem.wav.import
assets/alerts/follow/: follow.aseprite  (+3 more)
assets/sounds/: hehe_boi.wav.import  ok_lets_go.wav.import
bot/: bot.gd  bot.gd.uid  broadcaster.tres  oauth.tres  orco.gd  store.gd  store.gd.uid  twitch.gd  twitch.gd.uid  twitch.tscn
bot/leaderboard/: leaderboard.gd  leaderboard.gd.uid  leaderboard.tscn
chat/: chat.gd  chat.gd.uid  chat.tres  chat.tscn  chat_message_label.gd  message.gd  message.gd.uid
chat/alert/: alert.gd  alert.gd.uid  alert.tscn
chat/alertbox/: alertbox.gd  alertbox.tscn
chat/travel_widget/: travel_widget.gd  travel_widget.gd.uid  travel_widget.tscn
chatry/: Cargo.toml  README.md
chatry/src/: main.rs  youtube.rs
chatry/src/api/: mod.rs  twitch.rs  youtube.rs
chatry/src/overlay/: mod.rs  plushies.rs  plushys.rs
chatry/src/overlay/bot/: mod.rs  shell.rs
chatry/src/overlay/chatbot/: mod.rs  orco.rs
chatry/src/overlay/plushies/: mod.rs  world.rs
container/: Dockerfile  build.sh  example.sh  shell.sh
container/orco/: a.out  compile.sh
magic/: spell.gd.uid
plushiedit/: Cargo.toml  README.md  shell.nix
plushiedit/src/: main.rs
plushyedit/: Cargo.toml  README.md
plushyedit/src/: main.rs
screen/: mouse_follow.gd.uid  screen.gd  screen.tscn  window_border_walls.gd.uid
screen/plushie/: NoImagePlaceholder.svg.import  plushie.gd  plushie.gd.uid  plushie.tscn  plushie_config.gd  plushie_instance.gd  plushie_lib.gd  plushie_lib.gd.uid
screen/plushieball/: court.gd  court.tscn  hoop.gd  hoop.png.import  hoop.tscn  score.wav.import
screen/tool_wheel/: button.gd.uid  tool_wheel.gd  tool_wheel.gd.uid  tool_wheel.tscn
src/: bot.rs  config.rs  gl.rs  main.rs  math.rs  overlay.rs
src/overlay/: mod.rs  plushie.rs
src/shaders/: frag.glsl  vert.glsl
tool_wheel/: button.gd  tool_wheel.gd  tool_wheel.tscn
tool_wheel/send_box/: send_box.gd  send_box.gd.uid  send_box.tscn
world/: MouseFollow.gd  MouseFollow.gd.uid  mouse_follow.gd  tileset.png.import  tileset.tres  window_border_walls.gd  world.gd  world.gd.uid  world.tscn
world/basketball/: court.gd  court.tscn  hoop.gd  hoop.png.import  hoop.tscn  score.gd  score.wav.import
world/chat/: chat.gd  chat.tres  chat.tscn
world/jail/: jail.tscn  jailbars.png.import
world/plushie/: NoImagePlaceholder.svg.import  bone.gd  bone.gd.uid  bone.tscn  plushie.gd  plushie.gdshader  plushie.tscn  plushie_config.gd  plushie_instance.gd  plushie_instance.gd.uid  plushie_lib.gd  plushie_material.tres  plushie_proto.gd  plushie_proto.gd.uid
world/plushieball/: court.gd  court.gd.uid  court.tscn  hoop.gd  hoop.gd.uid  hoop.png.import  hoop.tscn  score.wav.import
world/soft_tuber/: audio.tres  photo.png.import  soft_tuber.gd  soft_tuber.gd.uid  soft_tuber.tscn
world/weapons/: triangle.tscn
(+839 files in other folders)
