[package]
name = "chatry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
toml = "0.7.6"
serde = { version = "1.0.180", features = ["derive"] }
map-macro = "0.2.6"
once_cell = "1.18.0"
rand = "0.8.5"

smol = "1.3.0"
twitchchat = { version = "0.14.8", features = ["smol", "async"] }

image = "0.24.6"
glium = { git = "https://github.com/glium/glium.git", branch = "glutin-0.30" }
winit = "0.28"
glium-glyph = { path = "vendor/glium-glyph" }
