[package]
name = "chatry"
version = "0.1.0"
edition = "2021"

authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Chatry - bot for my twitch channel!"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/chatry/"
license = "Apache-2.0"

[dependencies]
log = "0.4.20"
rand = "0.8.5"

geng = { git = "https://github.com/geng-engine/geng.git" }

tmi = "0.6.0"
youtube_chat = "0.2.1"
google-youtube3 = "5.0.4"
keyring-lib = "0.4.2"
hyper = "^ 0.14"
hyper-rustls = "0.24.0"

serde = "1.0.193"
async-process = "2.2.2"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "io-std"] }
rayon = "1.10.0"
textwrap = "0.16.1"
