[package]
name = "plushiedit"
version = "0.1.0"
edition = "2021"

authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Chatry - bot for my twitch channel!"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/chatry/"
license = "Apache-2.0"

[dependencies]
bidivec = "0.1.0"
line_drawing = "1.0.0"
ron = "0.8.1"
serde = { version = "1.0.185", features = ["derive"] }

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"
